[tool.poetry]
name = "tmp"
version = "0.1.0"
description = ""
authors = ["FrakenboK <xxxeromant@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
databases = "^0.9.0"
fastapi = "^0.115.12"
aiosqlite = "^0.21.0"
uvicorn = "^0.34.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
